--- a/requirements.txt
+++ b/requirements.txt
@@ -1,127 +1,7 @@
-affine==2.4.0
-altair==5.3.0
-asgiref==3.8.1
-attrs==23.2.0
-Automat==22.10.0
-beautifulsoup4==4.12.3
-blinker==1.7.0
-cachetools==5.3.3
-Cartopy==0.22.0
-certifi==2024.2.2
-cffi==1.16.0
-charset-normalizer==3.3.2
-click==8.1.7
-click-plugins==1.1.1
-cligj==0.7.2
-colorama==0.4.6
-constantly==23.10.4
-contextily==1.5.1
-contourpy==1.2.0
-cryptography==42.0.5
-cssselect==1.2.0
-cycler==0.12.1
-distlib==0.3.8
-Django==5.0.4
-filelock==3.13.4
-fiona==1.9.5
-Flask==3.0.3
-fonttools==4.49.0
-geographiclib==2.0
-geopandas==0.14.3
-geoplot==0.5.1
-geopy==2.4.1
-gitdb==4.0.11
-GitPython==3.1.43
-greenlet==3.0.3
-gunicorn==21.2.0
-h11==0.14.0
-hyperlink==21.0.0
-idna==3.6
-incremental==22.10.0
-itemadapter==0.8.0
-itemloaders==1.1.0
-itsdangerous==2.1.2
-Jinja2==3.1.3
-jmespath==1.0.1
-joblib==1.3.2
-jsonschema==4.21.1
-jsonschema-specifications==2023.12.1
-kiwisolver==1.4.5
-lxml==5.1.0
-mapclassify==2.6.1
-markdown-it-py==3.0.0
-MarkupSafe==2.1.5
-matplotlib==3.8.3
-mdurl==0.1.2
-mercantile==1.2.1
-networkx==3.2.1
-numpy==1.26.4
-outcome==1.3.0.post0
-packaging==23.2
-pandas==2.2.1
-parsel==1.9.1
-pillow==10.2.0
-platformdirs==4.2.2
-Protego==0.3.1
-protobuf==4.25.3
-pyarrow==16.0.0
-pyasn1==0.6.0
-pyasn1_modules==0.4.0
-pyChart.JS==0.3.0
-pycparser==2.22
-pydeck==0.8.1b0
-PyDispatcher==2.0.7
-Pygments==2.17.2
-pyOpenSSL==24.1.0
-pyparsing==3.1.1
-pypdf==4.2.0
-pyproj==3.6.1
-pyshp==2.3.1
-PySocks==1.7.1
-python-dateutil==2.9.0
-python-docx==1.1.0
-pytz==2024.1
-queuelib==1.6.2
-rasterio==1.3.9
-referencing==0.34.0
-requests==2.31.0
-requests-file==2.0.0
-rich==13.7.1
-rpds-py==0.18.0
-scikit-learn==1.4.1.post1
-scipy==1.12.0
-Scrapy==2.11.1
-seaborn==0.13.2
-selenium==4.19.0
-service-identity==24.1.0
-shapely==2.0.3
-six==1.16.0
-smmap==5.0.1
-sniffio==1.3.1
-snuggs==1.4.7
-sortedcontainers==2.4.0
-soupsieve==2.5
-SQLAlchemy==2.0.29
-sqlparse==0.5.0
-streamlit==1.33.0
-tenacity==8.2.3
-threadpoolctl==3.3.0
-tldextract==5.1.2
-toml==0.10.2
-toolz==0.12.1
-tornado==6.4
-trio==0.25.0
-trio-websocket==0.11.1
-Twisted==24.3.0
-typing_extensions==4.10.0
-tzdata==2024.1
-urllib3==2.2.1
-virtualenv==20.26.3
-w3lib==2.1.2
-watchdog==4.0.0
-Werkzeug==3.0.2
-wsproto==1.2.0
-WTForms==3.1.2
-xlrd==2.0.1
-xyzservices==2023.10.1
-zope.interface==6.3
+Flask==2.3.2
+plotly==5.15.0
+pandas==2.1.1
+jinja2==3.1.2
+numpy==1.25.0
+pyodbc==4.0.35
+SQLAlchemy==2.0.21
